# willnamelater

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  Makefile  NYX_Audit_Tool_PRD Claude_Final.docx  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.claude/: settings.json
services/ml/: .dockerignore  Dockerfile  README.md  pyproject.toml
services/ml/app/: __init__.py  main.py  schemas.py
services/ml/app/api/: __init__.py  comments.py  fraud.py  ml.py  pods.py
services/ml/app/features/: __init__.py  comments.py  engagement.py  follower.py  fraud_vector.py
services/ml/app/graph/: __init__.py  cocomment.py
services/ml/app/models/: __init__.py  anomaly.py  cliques.py  heuristics.py  pods.py  undbot.py
services/ml/app/registry/: __init__.py  comments.py  registry.py
services/ml/app/serving/: __init__.py  drift.py  shadow.py  supervised.py
services/ml/tests/: test_challenger.py  test_comments_rate.py  test_comments_version.py  test_feature_store.py  test_features.py  test_fraud.py  test_fraud_refine.py  test_fraud_serving.py  test_pods.py  test_promotion.py  test_registry_shadow.py  test_retrain_floor.py  test_serving_c1_roundtrip.py  test_serving_drift.py  test_serving_supervised.py  test_training_artifact.py  test_training_determinism.py  test_training_features.py  test_training_gate.py  test_validate_gates.py
services/ml/training/: README.md  RETRAINING_ARCHITECTURE.md  __init__.py  artifact.py  challenger.py  cli.py  feature_store.py  features.py  gate.py  labels.py  promotion.py  retrain.py  train.py  validate.py
web/: README.md  (+2 more)
(+648 files in other folders)
